--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Meme Creator</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -12,6 +13,7 @@
       <img src="logo.jpg" alt="Meme Creator Logo">
       <h1>Custom Meme Creator</h1>
     </div>
+
     <nav>
       <ul>
         <li><a href="#create">Create Meme</a></li>
@@ -19,21 +21,28 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+
   </header>
 
   <div class="container">
     <h2 id="create">Create Your Meme</h2>
     <div class="controls">
-      <input type="file" id="imageUpload" accept="image/*">
+      
+        <input type="file" id="imageUpload" accept="image/*">
+
       <select id="presetImages">
         <option value="" disabled selected>Select a preset</option>
-        <option value="preset1.jpg">lowwwwwwwww</option>
-        <option value="preset2.jpg">2025 massive meme</option>
+        <option value="none">None</option>
+        <option value="preset1.jpg">Lowwwwwwwwww</option>
+        <option value="preset2.jpg">Massive 2025</option>
       </select>
+
       <input type="text" id="topText" placeholder="Top Text">
       <input type="text" id="bottomText" placeholder="Bottom Text">
       <button id="downloadMeme">Download Meme</button>
+    
     </div>
+
     <canvas id="memeCanvas"></canvas>
   </div>
 
