--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Custom Meme Creator</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -13,7 +14,6 @@
       <img src="logo.jpg" alt="Meme Creator Logo">
       <h1>Custom Meme Creator</h1>
     </div>
-
     <nav>
       <ul>
         <li><a href="#create">Create Meme</a></li>
@@ -21,35 +21,27 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-
   </header>
-
   <div class="container">
     <h2 id="create">Create Your Meme</h2>
     <div class="controls">
-      
-        <input type="file" id="imageUpload" accept="image/*">
-
+      <input type="file" id="imageUpload" accept="image/*">
       <select id="presetImages">
         <option value="" disabled selected>Select a preset</option>
         <option value="none">None</option>
-        <option value="preset1.jpg">Lowwwwwwwwww</option>
-        <option value="preset2.jpg">Massive 2025</option>
+        <option value="cat.jpg">Funny Cat</option>
+        <option value="dog.jpg">Silly Dog</option>
       </select>
-
       <input type="text" id="topText" placeholder="Top Text">
       <input type="text" id="bottomText" placeholder="Bottom Text">
+      <button id="conditionalRandomizeMeme">Smart Randomize</button>
       <button id="downloadMeme">Download Meme</button>
-    
     </div>
-
     <canvas id="memeCanvas"></canvas>
   </div>
-
   <footer>
     <p>&copy; 2025 Custom Meme Creator. All rights reserved.</p>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
