--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Custom Meme Creator</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <!-- Add Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -46,6 +45,11 @@
       </div>
     </div>
   </div>
+
+  <!-- Fullscreen Button -->
+  <button id="fullscreenButton" class="fullscreen-button">
+    <i class="fas fa-expand"></i>
+  </button>
 
   <footer>
     <p>&copy; 2025 Custom Meme Creator. All rights reserved.</p>
